--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>${bukkit.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
