Use pom.xml version

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: HamsterAPI
-version: 0.1.6
+version: ${project.version}
 authors: [Sammwy, LinsaFTW]
 main: dev._2lstudios.hamsterapi.HamsterAPI
