--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: HamsterAPI
 version: 0.1.8
-authors: [Sammwy, LinsaFTW]
+author: 2LStudios
 api-version: 1.13
 main: dev._2lstudios.hamsterapi.HamsterAPI
