--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
-      <version>4.1.68.Final</version>
+      <version>4.1.84.Final</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
